--- a/frontend/src/views/index.pug
+++ b/frontend/src/views/index.pug
@@ -1,3 +1,17 @@
+- var pagetitle = 'App Index'
 include ./includes/header.pug
+
+- var headertitle = 'Amazing App'
+- var headersubtitle = 'The only application you will ever need'
+include ./includes/headerblock.pug
+
+main#index
+	div.container
+		div.row
+			div.col.l12.m12.s12.card
+				h1.center Lorem Ipsum sont Ama
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+include ./includes/login-modal.pug
 
 include ./includes/footer.pug
