Frontend bad commit

--- a/frontend/src/views/includes/login-modal.pug
+++ b/frontend/src/views/includes/login-modal.pug
@@ -1,2 +1,10 @@
 div#loginmodal.modal
-	div.modal-content Hello
+	div.modal-content
+		h3#logintitle.center Login
+		div.row
+			diw.col.l12.m12.s12
+				input#loginuser( placeholder="Email", type="email" )
+				input#loginpassword( placeholder="Password", type="password" )
+				button#loginbutton.btn.waves.col.l8.offset-l2.s12 Login
+				p.col.s12
+					a#toggleintent.col.l12.m12.s12.center( href="#" ) Register an account
