Login, register and autologin at register done

--- a/frontend/src/views/includes/header.pug
+++ b/frontend/src/views/includes/header.pug
@@ -7,7 +7,7 @@ html
 		nav.nav-wrapper
 			a.brand-logo Logo
 			ul#nav.right.hide-on-med-and-down
-				li#loggedoutmenu
+				li#loggedoutmenu.hide
 					a.modal-trigger#loginmenubutton( href='#loginmodal' ) Login / Register
 				li#loggedinmenu.hide
 					a#logoutmenubutton( href='#' ) Logout
