Sample env and simplified index

--- a/frontend/src/views/index.pug
+++ b/frontend/src/views/index.pug
@@ -5,7 +5,5 @@ html
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		link( href='./css/styles.css', rel='stylesheet' type="text/css" )
 		link( href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css" )
-	body
-		div#container
-		p Check
+	body#container
 		script( src='./js/app.js' )
