--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,19 +1,219 @@
-$primary-color-dark:   #388E3C;
-$primary-color:        #4CAF50;
-$primary-color-light:  #C8E6C9;
-$primary-color-text:   #FFFFFF;
-$accent-color:         #FFC107;
-$primary-text-color:   #212121;
-$secondary-text-color: #757575;
-$divider-color:        #BDBDBD;
+// Color Palette
+$smooth-color: #f4f5f6;
+$accent-color: #9b4dca;
 
-body {
+// Specific color declarations
+$header-background: $smooth-color;
+$menu-background: $accent-color;
+
+// Animations
+$menu-transition-speed: 0.5s;
+$hover-speed: 0.3s;
+@mixin hover-txt ( $speed )  {
+	transition: $speed;
+	text-shadow: 0 8px 5px rgba(0,0,0,0.3);
+}
+@mixin hover-element ( $speed )  {
+	transition: $speed;
+	box-shadow: 0 8px 5px rgba(0,0,0,0.3);
+}
+
+// Header configs
+$top-padding: 20px;
+
+// Hamburger config
+$hamburger-layer-color: $menu-background;
+$hamburger-layer-width: 30px;
+$hamburger-layer-height: 2px;
+$hamburger-layer-spacing: 6px;
+$hamburger-padding-x: $top-padding;
+$hamburger-padding-y: $top-padding;
+@import "./hamburgers/hamburgers.scss";
+
+// Mobile definitions
+$mq-mobile-portrait: 320px !default;
+$mq-mobile-landscape: 480px !default;
+$mq-tablet-portrait: 768px !default;
+$mq-tablet-landscape: 1024px !default;
+$mq-desktop: 1382px !default;
+@mixin mobile {
+	@media (max-width : $mq-mobile-landscape) {
+		@content;
+	}
+}
+@mixin tablet {
+	@media only screen and (min-width : $mq-mobile-landscape + 1) {
+		@content;
+	}
+}
+@mixin desktop{
+	@media only screen and (min-width : $mq-tablet-landscape + 1) {
+		@content;
+	}
+}
+@mixin retina {
+	@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
+		@content;
+	}
+}
+
+/* Getting relevant fonts */
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+body  {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+}
+
+// Browser stylesheet overrides
+button:focus  {
+	outline: 0px;
+}
+body  {
 	margin: 0;
 }
 
+// Visibility helpers
 .hide {
 	display: none;
 }
 .show {
 	display: block;
+}
+.absolute-show  {
+	left: 0;
+	top: 0;
+}
+.absolute-out-right  {
+	position: absolute;
+	left: 100vw;
+	top: 0;
+}
+
+// Sizing helpers
+.full  {
+	position: absolute;
+	top: 0;
+	min-height: 100vh;
+	width: 100vw;
+}
+.depth  {
+	transition: $hover-speed;
+	&:hover  {
+		@include hover-txt ( $hover-speed )
+		opacity: 0.8;
+	}
+}
+.shadow  {
+	@include hover-txt ( $hover-speed )
+}
+
+// Alignment helpers
+.valign  {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+// Styling helpers
+.white  {
+	color: white;
+}
+.nomar  {
+	margin: 0;
+}
+
+// Menu styles
+#menu  {
+	#identity  {
+		position: absolute;
+		left: 0;
+		top: 0;
+		padding: $top-padding;
+		opacity: 0.7;
+	}
+	nav {
+		background-color: $menu-background;
+		z-index: 1;
+		transition: $menu-transition-speed ease;
+		button  {
+			position:relative;
+			right:0;
+			top:0;
+			z-index:2;
+		}
+		#menutitle  {
+			text-align: center;
+			color: white;
+			font-family: sans-serif;
+			font-size: 3em;
+		}
+		ul  {
+			list-style: none;
+			text-align: center;
+			margin: 0;
+			padding: 0;
+			.menuitem  {
+				// Font styling
+				font-size: 2em;
+				font-family: sans-serif;
+				text-decoration: none;
+				color: white;
+				font-style: italic;
+			}
+		}
+	}
+	#menu-btn  {
+		position: absolute;
+		right: 0;
+		top: 0;
+		z-index: 2;
+		transition: $menu-transition-speed;
+		.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after  {
+			transition: 1s;
+		}
+		&.is-active  {
+			.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after  {
+				background-color: $header-background;
+			}
+		}
+		&:hover  {
+			.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after  {
+				@include hover-element ( $hover-speed )
+			}
+		}
+	}
+}
+
+// header block styles
+#header  {
+	min-height: 300px;
+	background-color: $header-background;
+	flex-direction: column;
+	#title  {
+		color: $accent-color;
+	}
+	#subtitle  {
+		opacity: 0.5;
+	}
+}
+
+// Container definitions
+.container  {
+	padding: 20px;
+	@include retina (  )  {
+		width: 60%;
+		margin: 50px 20%;
+	}
+	@include desktop (  )  {
+		width: 70%;
+		margin: 50px 15%;
+	}
+	@include tablet (  )  {
+		width: 80%;
+		margin: 30px 10%;
+	}
+	@include mobile (  )  {
+		width: 100%;
+		margin: 20px 0;
+	}
 }
