--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -64,6 +64,16 @@ body  {
 	font-weight: 300;
 }
 
+// Sticky footer
+.flexify {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
+main {
+	flex: 1 0 auto;
+}
+
 // Browser stylesheet overrides
 button:focus  {
 	outline: 0px;
@@ -129,6 +139,8 @@ body  {
 		left: 0;
 		top: 0;
 		padding: $top-padding;
+		text-decoration: none;
+		color: $accent-color;
 		opacity: 0.7;
 	}
 	nav {
@@ -145,7 +157,7 @@ body  {
 			text-align: center;
 			color: white;
 			font-family: sans-serif;
-			font-size: 3em;
+			font-size: 2rem;
 		}
 		ul  {
 			list-style: none;
@@ -154,7 +166,7 @@ body  {
 			padding: 0;
 			.menuitem  {
 				// Font styling
-				font-size: 2em;
+				font-size: 1.5rem;
 				font-family: sans-serif;
 				text-decoration: none;
 				color: white;
@@ -199,7 +211,6 @@ body  {
 
 // Container definitions
 .container  {
-	padding: 20px;
 	@include retina (  )  {
 		width: 60%;
 		margin: 50px 20%;
@@ -215,5 +226,19 @@ body  {
 	@include mobile (  )  {
 		width: 100%;
 		margin: 20px 0;
+	}
+}
+section  {
+	padding: 20px;
+}
+
+// Footer
+footer  {
+	background-color: $smooth-color;
+	#copyright  {
+		margin: 10px;
+		text-align: center;
+		font-size: 0.8em;
+		opacity: 0.5;
 	}
 }
